--- a/padre-ginos/package.json
+++ b/padre-ginos/package.json
@@ -6,15 +6,26 @@
   "scripts": {
     "format": "prettier --write \"src/**/*.{js,jsx,tsx,ts,css,html}\"",
     "lint": "eslint",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "vite build",
+    "dev": "vite",
+    "preview": "vite preview"
   },
   "keywords": [],
+  "type": "module",
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-react": "^7.37.1",
     "globals": "^17.2.0",
-    "prettier": "^3.8.1"
+    "prettier": "^3.8.1",
+    "vite": "^5.4.2"
+  },
+  "dependencies": {
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
